package pojo;
option java_package = "org.wowtools.pmgowiki.extractor.probuf";
option java_outer_classname = "PmgoProbuf";
message RequestEnvelop {
  optional int32 unknown1 = 1;
  optional int64 rpc_id = 3;
  repeated Requests requests = 4;
  optional Unknown6 unknown6 = 6;
  optional fixed64 latitude = 7;
  optional fixed64 longitude = 8;
  optional fixed64 altitude = 9;
  optional AuthInfo auth = 10;
  optional int64 unknown12 = 12;

  message Requests {
    optional int32 type = 1;
    optional Unknown3 message = 2;
  }

  message Unknown3 {
    optional string unknown4 = 1;
  }

  message Unknown6 {
    optional int32 unknown1 = 1;
    optional Unknown2 unknown2 = 2;

    message Unknown2 {
      optional bytes unknown1 = 1;
    }

  }
  message AuthInfo {
    optional string provider = 1;
    optional JWT token = 2;

    message JWT {
      optional string contents = 1;
      optional int32 unknown13  = 2;
    }
  }
}

message ResponseEnvelop {
  optional int32 unknown1 = 1;
  optional int64 unknown2 = 2;
  optional string api_url = 3;
  optional Unknown6 unknown6 = 6;
  optional Unknown7 unknown7 = 7;
  repeated Payload payload = 100;

  message Unknown6 {
    optional int32 unknown1 = 1;
    optional Unknown2 unknown2 = 2;

    message Unknown2 {
      optional bytes unknown1 = 1;
    }

  }

  message Unknown7 {
    optional bytes unknown71 = 1;
    optional int64 unknown72 = 2;
    optional bytes unknown73 = 3;
  }

  message Payload {
    optional int32 unknown1 = 1;
    optional Profile profile = 2;
  }

  message Profile {
    optional int64 creation_time = 1;
    optional string username = 2;
    optional int32 team = 5;
    optional bytes tutorial = 7; 
    optional AvatarDetails avatar = 8; 
    optional int32 poke_storage = 9;
    optional int32 item_storage = 10;
    optional DailyBonus daily_bonus = 11;
    optional bytes unknown12 = 12;
    optional bytes unknown13 = 13;
    repeated Currency currency = 14;

    message AvatarDetails {
      optional int32 unknown2 = 2;
      optional int32 unknown3 = 3;
      optional int32 unknown9 = 9;
      optional int32 unknown10 = 10;
    }

    message DailyBonus {
      optional int64 NextCollectTimestampMs = 1;
      optional int64 NextDefenderBonusCollectTimestampMs = 2;
    }

    message Currency {
      optional string type = 1;
      optional int32 amount = 2;
    }
  }
}
